# HollowCore

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  HCCore.c  HCCore.h  HCNumber.c  HCNumber.h  HCNumber_Internal.h  HCObject.c  HCObject.h  HCObject_Internal.h  LICENSE  Package.swift  README.md
HollowCore.xcodeproj/: project.pbxproj
HollowCore.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
HollowCore.xcodeproj/xcshareddata/xcschemes/: CMake Build.xcscheme  Doxygen.xcscheme  HollowCore.xcscheme  Test.xcscheme
Source/: HCCore.c  HCCore.h  HCData.c  HCData.h  HCData_Internal.h  HCList.c  HCList.h  HCList_Internal.h  HCMap.c  HCMap_Internal.h  HCNumber.c  HCNumber.h  HCNumber_Internal.h  HCObject.c  HCObject.h  HCObject_Internal.h  HCSet.c  HCSet.h  HCSet_Internal.h  HCString.c  HCString.h  HCString_Internal.h  HollowCore.h
Source/Container/: HCList.c  HCList.h  HCList_Internal.h  HCMap.c  HCMap.h  HCMap_Internal.h  HCSet.c  HCSet.h  HCSet_Internal.h
Source/Core/: HCCore.c  HCCore.h  HCObject.c  HCObject.h  HCObject_Internal.h
Source/Data/: HCData.c  HCData.h  HCData_Internal.h  HCNumber.c  HCNumber.h  HCNumber_Internal.h  HCString.c  HCString.h  HCString_Internal.h
Source/Geometry/: HCContour.c  HCContour.h  HCContourComponent.c  HCContourComponent.h  HCContourCurve.c  HCContourCurve.h  HCCurve.c  HCCurve.h  HCPath+SVG.c  HCPath+SetOperations.c  HCPath+SetOperations.h  HCPath+Shapes.c  HCPath.c  HCPath.h  HCPath_Internal.h  HCPoint.c  HCPoint.h  HCRay.c  HCRay.h  HCRectangle.c  HCRectangle.h  HCSize.c  HCSize.h  HCVector.c  HCVector.h
Source/Graphic/: HCColor.c  HCColor.h  HCContour.c  HCContour.h  HCContourCurve.c  HCContourCurve.h  HCContourElement.c  HCContourElement.h  HCPath+BooleanOperations.c  HCPath+BooleanOperations.h  HCPath+SVG.c  HCPath+SVG.h  HCPath+Shapes.c  HCPath+Shapes.h  HCPath.c  HCPath.h  HCPath_Internal.h  HCPrimitive.c  HCPrimitive.h  HCPrimitive_Internal.h  HCRaster+Draw.c  HCRaster+Draw.h  HCRaster+File.c  HCRaster+File.h  HCRaster.c  HCRaster.h  HCRaster_Internal.h  HCRay.c  HCRay.h  HCSphere.c  HCSphere.h  HCSphere_Internal.h  HCVector.c  HCVector.h
Source/JSON/: HCJSON.c  HCJSON.h  HCJSON_Internal.h
Source/JSON/json-parser/: json.c
Source/Thread/: HCCondition.c  HCCondition.h  HCCondition_Internal.h  HCLock.c  HCLock.h  HCLock_Internal.h  HCThread.c  HCThread.h  HCThread_Internal.h
Test/: HCColor.c  HCCondition.c  HCContour.c  HCContourComponent.c  HCContourCurve.c  HCContourElement.c  HCCore.c  HCCurve.c  HCData.c  HCJSON.c  HCList.c  HCLock.c  HCMap.c  HCMap_Internal.c  HCMultiThreadedReferenceCounting.c  HCNumber.c  HCObject.c  HCPath.c  HCPoint.c  HCRaster.c  HCRay.c  HCRectangle.c  HCSet.c  HCSize.c  HCString.c  HCThread.c  HCThread_Internal.c  HCVector.c  Trace.c  main.c
Tools/: Regex.txt  build.sh  cmake_common_source  test.sh  travis_before_install.sh  travis_ci.sh  valgrind_test.sh
include/: HollowCore.h
include/Container/: HCList.h  HCMap.h  HCSet.h
include/Core/: HCCore.h  HCObject.h
include/Data/: HCData.h  HCNumber.h  HCString.h
include/Geometry/: HCPoint.h  HCRectangle.h  HCSize.h
include/Graphic/: HCContourElement.h  HCPath.h  HCRaster.h  HColor.h
include/JSON/: HCJSON.h
include/Thread/: HCLock.h  HCThread.h
